--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.ayushio.syncer">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -20,6 +21,8 @@
         </activity>
         <activity android:name=".ServerActivity">
 
+        </activity>
+        <activity android:name=".ClientActivity">
         </activity>
     </application>
 
